# curiosity_G1

./: .gitignore  CLAUDE.md  MUJOCO_LOG.TXT  STATUS.md  distill.py  generate_plan.py  launch.py  plot_runs.py  pyproject.toml  requirements.txt  requirements_full.txt
configs/: base.yaml  distill_cl_tanh.yaml  distill_local.yaml  distill_local_tanh.yaml  distill_local_tanh_hi.yaml  distill_task4.yaml  local.yaml  sweep_rnd.yaml
scripts/: auto_push.sh  diagnose_task1_success.py  dump_isaac_contract.py  dump_isaac_rollout.py  pd_controller_test.py  run_drnd_all_tasks.sh  run_drnd_shaped.sh  run_rdd_after_drnd.sh  run_task2_after_chain.sh  sensor_reach_test.py  smoke_test.py  unit_test_task1.py  unit_test_task2.py  unit_test_task3.py  unit_test_task4.py  unit_test_task5.py  validate_g1_urdf.py
src/agents/: ppo.py
src/curiosity/: __init__.py  drnd.py  rdd.py  rnd.py
src/distill/: __init__.py  dagger.py  mujoco_eval.py
src/envs/: __init__.py  g1_cfg.py  tool_use_base.py
src/envs/mdp/: __init__.py  events.py  observations.py  rewards.py  terminations.py
src/envs/tasks/: __init__.py  composite.py  distant_target.py  elevated_button.py  occluded_retrieval.py  weight_lever.py
src/utils/: networks.py
