[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cdl-tool-use"
version = "0.1.0"
description = "Curiosity-Driven RL for Emergent Tool Use on a Humanoid Robot"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
